Fixed CSS
Fixed the clouds not moving in the CSS and may have cropped the chibi image since it was cloned from my mothers day chibi image (0.0)

--- a/stylez.css
+++ b/stylez.css
@@ -262,32 +262,32 @@ body::before {
     box-shadow: 0 0 40px rgba(223, 230, 233, 0.75);
 }
 
-/* All clouds share these animations */
-.cloud.small.fluffy, .cloud.medium.fluffy, .cloud.large.fluffy {
+/* CORRECTED AND COMBINED ANIMATION RULES */
+.cloud.small {
+    width: 100px;
+    height: 60px;
     animation:
+        driftSmall 60s linear infinite,
         floatCloud 6s ease-in-out infinite,
         fluffyOpacityPulse 4s ease-in-out infinite;
 }
 
-.cloud.small {
-    animation-name: driftSmall;
-    animation-duration: 60s;
-    animation-timing-function: linear;
-    animation-iteration-count: infinite;
-}
-
 .cloud.medium {
-    animation-name: driftMedium;
-    animation-duration: 90s;
-    animation-timing-function: linear;
-    animation-iteration-count: infinite;
+    width: 160px;
+    height: 90px;
+    animation:
+        driftMedium 90s linear infinite,
+        floatCloud 7s ease-in-out infinite,
+        fluffyOpacityPulse 4s ease-in-out infinite;
 }
 
 .cloud.large {
-    animation-name: driftLarge;
-    animation-duration: 120s;
-    animation-timing-function: linear;
-    animation-iteration-count: infinite;
+    width: 220px;
+    height: 120px;
+    animation:
+        driftLarge 120s linear infinite,
+        floatCloud 8s ease-in-out infinite,
+        fluffyOpacityPulse 4s ease-in-out infinite;
 }
 
 .cloud::before, .cloud::after {
@@ -319,11 +319,6 @@ body::before {
     }
 }
 
-.cloud.small {
-    width: 100px;
-    height: 60px;
-}
-
 .cloud.small::before {
     width: 70px;
     height: 70px;
@@ -338,11 +333,6 @@ body::before {
     left: 70px;
 }
 
-.cloud.medium {
-    width: 160px;
-    height: 90px;
-}
-
 .cloud.medium::before {
     width: 100px;
     height: 100px;
@@ -355,11 +345,6 @@ body::before {
     height: 70px;
     top: -10px;
     left: 100px;
-}
-
-.cloud.large {
-    width: 220px;
-    height: 120px;
 }
 
 .cloud.large::before {
